pxc/tests/test_01_px/constmet10.px
import test_common "";

namespace constmet6;

struct foo {
	int x;
	function int n(int y) {
		int oldx = x;
		x = y;
		return oldx;
	}
	function int m(int y) const {
		function int nf(int z) {
			// x = 99; // error: not modifiable
			return z;
		}
		return nf(y);
	}
}

ptr{foo} v = ptr{foo}(foo(10));
println(v->m(20));

